--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
-@import url("https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,400;0,500;0,600;0,700;1,400&family=Miniver&family=Monoton&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Anton&family=Great+Vibes&family=Monoton&family=Roboto+Mono:wght@400;500;600;700&display=swap");
+
 :root {
   --color-primary-100: rgb(11, 19, 21);
   --color-primary-200: rgb(15, 29, 34);
@@ -12,14 +13,17 @@
   --color-gray-200: rgb(156, 156, 164);
 }
 
-* {
+*,
+*::before,
+*::after {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
 }
 
 html {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 400;
   font-size: 62.5%;
 }
 body {
@@ -58,14 +62,10 @@ li {
 }
 
 /****************************  HELPER CLASSES  ****************************/
-
 .sm-margin-top {
-  margin-top: 0.5rem;
-}
-.md-margin-top {
   margin-top: 1rem;
 }
-.ml-margin-top {
+.m-margin-top {
   margin-top: 2.5rem;
 }
 
@@ -87,10 +87,13 @@ li {
 }
 
 .md-margin-bottom {
-  margin-bottom: 0.7rem;
+  margin-bottom: 1rem;
 }
 .mds-margin-bottom {
   margin-bottom: 2rem;
+}
+.mdm-margin-bottom {
+  margin-bottom: 10rem;
 }
 
 .lg-margin-bottom {
@@ -114,252 +117,441 @@ li {
   padding: 10rem;
 }
 
-.container {
-  max-width: 100%;
-  display: block;
-}
-
-.grid-45-55 {
-  display: grid;
-  gap: 5rem;
-  grid-template-columns: 45fr 55fr;
-  justify-content: center;
-}
-
-.grid-55-45-map {
-  display: grid;
-  gap: 5rem;
-  grid-template-columns: 55fr 45fr;
-  justify-content: center;
-  align-items: center;
-}
-
-.flex-icons {
-  display: flex;
-  justify-content: flex-start;
-  gap: 2rem;
-  align-items: center;
-}
-.flex-description {
-  display: flex;
-  gap: 1.5rem;
-  place-content: center;
-}
-.nav-links {
-  cursor: pointer;
-}
-
-.section {
-  opacity: 1;
-  transform: translateY(0);
-  transition: transform 0.7s, opacity 0.9s;
-}
-
-.section--hidden {
-  opacity: 0;
-  transform: translateY(2rem);
-}
-
 /****************************  HERO CONTENT  ****************************/
-.hero {
-  background: var(--color-primary-100);
-}
 
-.inner-hero {
-  height: 90vh;
+.container-hero {
   width: 100%;
-  margin: 0;
-  padding: 0;
-  display: flex;
-  place-content: center;
-  align-items: center;
+  height: 100vh;
 }
-
-.flex {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-}
-
-.leaves:before {
-  display: inline-flex;
-  content: "";
-  background-image: url(../public/images/icons/left-leaves.svg);
-  background-size: 9rem 9rem;
-  height: 9rem;
-  width: 9rem;
-}
-.leaves:after {
-  display: inline-flex;
-  content: "";
-  background-image: url(../public/images/icons/right-leaves.svg);
-  background-size: 9rem 9rem;
-  height: 9rem;
-  width: 9rem;
-}
-
-/****************************  ALL CAPTIONS ****************************/
-.sections {
-  margin-top: 12rem;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.caption-upper {
+.temp {
   position: absolute;
-  padding: 0 0 13rem 0;
-  font-family: "Miniver", cursive;
-  font-size: 2.4rem;
-  font-weight: 400;
-  color: var(--color-secondary-100);
-  white-space: nowrap;
-}
-.caption-middle {
-  position: relative;
-  font-family: inherit;
-  font-size: 4.8rem;
-  font-weight: 400;
-  text-transform: uppercase;
-  color: var(--color-secondary-100);
-  white-space: nowrap;
-  margin-bottom: 1.8rem;
-}
-.caption-bottom {
-  text-align: center;
-  font-family: inherit;
-  font-size: 1.8rem;
-  font-weight: 400;
-  line-height: 1.6;
-  color: var(--color-white-100);
+  width: 100%;
+  height: 100vh;
+  background-color: var(--color-primary-100);
+  background-size: cover;
+  animation: fadeOut 5s linear forwards;
+  opacity: 1;
 }
 
-.caption-sides {
-  text-align: center;
-  font-family: inherit;
-  font-size: 1.6rem;
-  line-height: 1.7;
-  font-weight: 400;
-  color: var(--color-white-100);
+@keyframes fadeOut {
+  0% {
+    opacity: 0;
+  }
+  40% {
+    opacity: 0;
+  }
+  41% {
+    opacity: 1;
+  }
+  91% {
+    opacity: 1;
+  }
+  92% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
 }
 
-/**************************** ABOUT US ICONS ****************************/
-.aboutus {
-  font-size: 1.8rem;
-  font-family: inherit;
-  align-items: center;
-  padding: 4rem 20rem;
-  line-height: 1.5;
-  hyphens: inherit;
-  color: var(--color-white-100);
-  margin: auto;
-  text-align: center;
-}
-.imp-line {
-  letter-spacing: 0.06rem;
-  color: var(--color-secondary-100);
+.first-block {
+  position: absolute;
+  width: 0;
+  height: 100vh;
+  background-color: var(--color-white-200);
+  animation: go-left 4s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards;
+  left: 0;
 }
 
-.icon-flex-grid {
-  display: grid;
-  align-items: center;
-  grid-template-columns: repeat(4, 1fr);
+@keyframes go-left {
+  0% {
+    left: 0;
+    width: 0%;
+  }
+  50% {
+    left: 0;
+    width: 100%;
+  }
+  100% {
+    left: 100%;
+    width: 0;
+  }
 }
 
-.icons-text-prefix {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 1rem;
+.second-block {
+  position: absolute;
+  width: 0;
+  height: 100vh;
+  background-color: var(--color-tertiary-200);
+  animation: go-left 3.2s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards;
+  animation-delay: 3s;
 }
 
-.icon-caption {
-  font-family: inherit;
-  font-size: 1.8rem;
-  font-weight: 700;
-  line-height: 1.6;
-  color: var(--color-tertiary-200);
-}
-
-/**************************** WOMENS CARD ****************************/
-.ui-card {
-  position: relative;
-  cursor: pointer;
-  margin: auto;
-  width: 50rem;
-  height: 55rem;
-  width: auto;
-  background: var(--color-primary-100);
-}
-
-.caption-middle-womens {
-  position: relative;
-  font-family: inherit;
-  font-size: 4.6rem;
-  font-weight: 400;
-  text-transform: uppercase;
-  color: var(--color-secondary-100);
-  white-space: nowrap;
-  margin-bottom: 1.8rem;
-}
-
-.ui-card-title {
-  font-size: 2rem;
-  font-family: "Miniver", cursive;
-  color: var(--color-white-100);
+.loader {
   position: absolute;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, 700%);
+  transform: translate(-50%, -50%);
+}
+
+.loader ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
+.loader ul li {
+  display: inline-block;
+  color: var(--color-white-100);
+  font-family: inherit;
+  font-weight: bolder;
+  margin: 0 0.8rem;
+  font-size: 2.4rem;
+  text-transform: uppercase;
+  animation: loadNow 4s ease-in-out forwards;
+  opacity: 0;
+  transform: translateX(0rem);
+}
+
+@keyframes loadNow {
+  0% {
+    opacity: 0;
+    transform: translateX(8rem);
+  }
+  20% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
+  80% {
+    opacity: 1;
+    transform: translateX(0rem);
+  }
+  100% {
+    opacity: 0;
+    transform: translateX(-8rem);
+  }
+}
+.loader ul li:nth-child(1) {
+  animation-delay: 1.05s;
+}
+.loader ul li:nth-child(2) {
+  animation-delay: 1.1s;
+}
+.loader ul li:nth-child(3) {
+  animation-delay: 1.15s;
+}
+.loader ul li:nth-child(4) {
+  animation-delay: 1.2s;
+}
+.loader ul li:nth-child(5) {
+  animation-delay: 1.25s;
+}
+.loader ul li:nth-child(6) {
+  animation-delay: 1.3s;
+}
+.loader ul li:nth-child(7) {
+  animation-delay: 1.35s;
+}
+.loader ul li:nth-child(8) {
+  animation-delay: 1.4s;
+}
+.loader ul li:nth-child(9) {
+  animation-delay: 1.45s;
+}
+.loader ul li:nth-child(10) {
+  animation-delay: 1.5s;
+}
+.third-block {
+  position: absolute;
+  width: 0%;
+  height: 100vh;
+  background: var(--color-primary-200);
+  animation: expandNow 1.4s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+  animation-delay: 6.2s;
+}
+@keyframes expandNow {
+  0% {
+    width: 0%;
+  }
+  100% {
+    width: 64%;
+  }
+}
+
+.menu {
+  position: absolute;
+  right: 0;
+  margin: 3rem;
+}
+
+.logo {
+  position: absolute;
+  left: 0;
+  margin: 2rem;
+}
+.logo img {
+  opacity: 0;
+  animation: appearimg 0.1s linear forwards;
+  animation-delay: 6.4s;
+}
+.content {
+  position: absolute;
+  width: 50rem;
+  top: 46%;
+  left: 28%;
+  transform: translate(-50%, -50%);
+  text-align: left;
+}
+.heading {
+  font-family: "Great Vibes", cursive;
+  font-weight: bolder;
+  font-size: 4.2rem;
+  line-height: 1;
+  color: var(--color-secondary-100);
+}
+.desc {
+  font-family: inherit;
+  font-weight: bolder;
+}
+.desc p {
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+  color: var(--color-white-100);
+  font-size: 2rem;
+  font-weight: 800;
+  line-height: 1.4;
+}
+
+.button-hero {
+  font-family: inherit;
+  border: none;
+  padding: 1.6rem 4rem;
+  letter-spacing: 0.2rem;
+  text-transform: uppercase;
+  background-color: var(--color-secondary-100);
+  cursor: pointer;
+}
+
+.button-hero:hover {
+  background-color: var(--color-secondary-200);
+}
+
+.img img {
+  width: 50rem;
+  height: 100%;
+  opacity: 0;
+  animation: appearimg 0.1s linear forwards;
+  animation-delay: 6.4s;
+}
+
+.img {
+  position: absolute;
+  z-index: 1000;
+  top: 50%;
+  right: 14%;
+  transform: translateY(-65%);
+}
+
+.img::after {
+  content: "";
+  top: 0;
+  left: 0;
+  width: 0%;
+  height: 100%;
+  position: absolute;
+  background: var(--color-tertiary-200);
+  animation: rev-img 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards;
+  animation-delay: 6s;
+}
+
+@keyframes rev-img {
+  0% {
+    left: 0;
+    width: 0%;
+  }
+  50% {
+    width: 50rem;
+    left: 0;
+  }
+  100% {
+    left: 50rem;
+    width: 0;
+  }
+}
+
+@keyframes appearimg {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.media ul {
+  list-style: none;
+  position: absolute;
+  bottom: 0;
+  right: 2.4rem;
+  padding: 1rem;
+}
+
+.media ul li {
+  font-size: 1.8rem;
+  margin: 2.4rem 0;
+}
+
+/**************************** ABOUT US ****************************/
+
+.caption-about {
+  font-size: 6.4rem;
+  color: var(--color-secondary-100);
+  text-align: right;
+  margin-right: 20rem;
+  margin-top: 10rem;
+  font-family: "Great Vibes", cursive;
+}
+
+.aboutus-container {
+  width: 100%;
+  display: flex;
+  place-self: center;
+  padding: 5rem 10rem;
+  margin-bottom: 10rem;
+}
+.aboutus-description {
+  font-size: 3.2rem;
+  font-weight: 400;
+  line-height: 1.32;
+  font-family: inherit;
+  margin-bottom: 5rem;
+  color: var(--color-white-100);
+}
+.aboutus-description-thanks {
+  color: var(--color-secondary-100);
+}
+
+/**************************** WOMENS CARD ****************************/
+
+.container-left {
+  width: 50%;
+  position: relative;
+}
+.women-card-wrappper {
+  min-height: 100vh;
+  height: auto;
+  width: 100vw;
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+}
+
+.women-title {
+  font-size: 6.4rem;
+  position: absolute;
+  font-family: "Great Vibes", cursive;
+  top: 5rem;
+  left: 2.5%;
+  z-index: 15;
+  color: var(--color-secondary-100);
+  font-weight: 400;
+}
+.left-block-women-card {
+  width: 35%;
+  background-color: var(--color-primary-200);
+  color: var(--color-white-100);
+  min-height: 100vh;
+  z-index: 5;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 2rem;
+  padding: 2rem;
+}
+
+.right-block-women-card {
+  color: var(--color-white-200);
+  position: absolute;
+  padding-left: 30%;
+  top: 5%;
+  left: 85%;
+  width: 90%;
+}
+
+.right-block-women-card .styled {
+  width: 5rem;
+  margin: 0 2rem;
+}
+
+/**************************** GALLERY****************************/
+.caption-gallery {
+  font-size: 6.4rem;
+  font-family: "Great Vibes", cursive;
+  color: var(--color-secondary-100);
+  text-align: center;
+  margin-top: 10rem;
+}
+.gallery {
+  padding: 2rem;
 }
 
 /**************************** MENU ****************************/
-.menu-grid {
-  display: grid;
-  grid-template-columns: 50fr 50fr;
+#menu {
+  height: 100%;
+  background-color: var(--color-primary-200);
+  border-top: 1px solid var(--color-secondary-100);
+  border-bottom: 1px solid var(--color-secondary-100);
 }
-.menu-grid-inner {
-  display: grid;
-  grid-template-columns: 50fr 50fr;
+.caption-menu {
+  padding: 0.5rem 0rem 0rem 0rem;
+  font-size: 6.4rem;
+  color: var(--color-secondary-100);
+  text-align: center;
+  margin-top: 10rem;
+  font-family: "Great Vibes", cursive;
 }
 
-.menu-details-caption {
+.menu-flex {
   display: flex;
-  place-content: center;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 0rem 0rem 5rem 0;
+  gap: 30%;
+}
+
+.menu-items-caption {
+  font-size: 5rem;
   color: var(--color-tertiary-200);
   font-family: "Monoton", cursive;
-  font-size: 4.4rem;
-  font-weight: 400;
-  margin-bottom: 1.5rem;
 }
-.menu-details-upper {
-  padding: 0 10rem;
+.menu-items-sub-cation {
+  font-size: 2.4rem;
+  margin-top: 1.5rem;
   color: var(--color-secondary-100);
-  font-size: 2rem;
   font-family: inherit;
-  font-weight: 800;
 }
-.menu-details {
-  padding: 0 10rem;
+.menu-items {
+  font-size: 2rem;
   color: var(--color-white-100);
-  font-size: 2rem;
-  font-family: inherit;
-  font-weight: 600;
 }
-
 /**************************** TESTIMONIALS ****************************/
+.caption-testimonial {
+  font-size: 6.4rem;
+  color: var(--color-secondary-100);
+  text-align: center;
+  margin-top: 10rem;
+  margin-bottom: 4rem;
+  font-family: "Great Vibes", cursive;
+}
 
 .comments {
   display: flex;
-  position: relative;
   font-size: 1.6rem;
-  font-family: "Miniver", cursive;
-  font-weight: 400;
-  justify-content: space-evenly;
+  margin-top: 4rem;
+  font-family: "Roboto Mono", monospace;
   align-items: center;
-  height: 23rem;
-  padding: 2rem;
+  height: 13rem;
   color: var(--color-white-100);
   margin: auto;
   text-align: center;
@@ -367,72 +559,83 @@ li {
 }
 
 .author {
-  font-size: 2rem;
+  font-size: 3rem;
+  margin-top: 3rem;
   color: var(--color-secondary-100);
-  font-family: "Josefin Sans", sans-serif;
+  font-family: "Great Vibes", cursive;
 }
-
 /**************************** RESERVATION ****************************/
 
-.mapbox {
-  border: none;
-}
-.map-container {
-  height: 50rem;
-}
-
-.flex-column {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  gap: 2rem;
-}
-
-.reservation-location {
-  text-align: center;
-  font-size: 4rem;
+.thoughts-caption {
+  text-align: left;
+  margin-top: 15rem;
+  font-size: 6rem;
   font-weight: 400;
   line-height: 2;
   color: var(--color-secondary-100);
+  font-family: "Great Vibes", cursive;
+}
+.grid-50-50 {
+  margin-top: 10%;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 5rem;
+  padding: 0 5rem;
+}
+
+.location {
+  background-color: var(--color-primary-200);
+  border: 2px solid var(--color-secondary-100);
+  border-radius: 5%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.location-caption {
+  text-align: right;
+  font-size: 6.2rem;
+  font-weight: 400;
+  line-height: 1.7;
+  font-family: "Great Vibes", cursive;
+  color: var(--color-secondary-100);
+}
+
+.location-detail {
+  text-align: right;
+  font-family: inherit;
+  font-size: 2rem;
+  padding: 2rem;
+  font-weight: 400;
+
+  color: var(--color-white-100);
 }
 
 .reservation-caption-up {
+  font-family: "Great Vibes", cursive;
   text-align: center;
-  font-family: "Miniver", cursive;
-  font-size: 2.2rem;
-  font-weight: 400;
-  line-height: 1.6;
-  color: var(--color-white-100);
-}
-.reservation-number {
-  text-align: center;
-  font-family: inherit;
-  font-size: 3rem;
-  font-weight: 400;
-  color: var(--color-secondary-100);
-}
-.reservation-caption {
-  text-align: center;
-  font-family: inherit;
-  font-size: 1.7rem;
-  font-weight: 400;
-  line-height: 1.6;
-  color: var(--color-white-100);
-}
-
-.reservation-contactus-up {
-  text-align: left;
-  font-size: 4rem;
+  font-size: 6.4rem;
+  margin-top: 12rem;
   font-weight: 400;
   line-height: 1.6;
   color: var(--color-secondary-100);
 }
 .reservation-contactus {
-  text-align: left;
-  font-size: 1.8rem;
+  text-align: center;
+  font-size: 2rem;
   font-weight: 400;
-  line-height: 1.6;
+  margin-bottom: 3rem;
   color: var(--color-white-100);
+}
+
+.reservation-number {
+  text-align: center;
+  font-family: inherit;
+  font-size: 3rem;
+  line-height: 1.6;
+  font-weight: 400;
+  color: var(--color-secondary-100);
 }
 
 .grid-form {
@@ -474,19 +677,31 @@ li {
 }
 
 input::placeholder {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: inherit;
   color: var(--color-gray-100);
 }
 textarea::placeholder {
-  font-family: "Josefin Sans", sans-serif;
+  font-family: inherit;
   color: var(--color-gray-100);
 }
 
 /**************************** FOOTER ****************************/
-.footer-flex {
+
+.footer-flex-informations {
+  margin-top: 20rem;
   display: flex;
   gap: 3rem;
   place-content: center;
+  color: var(--color-white-100);
+  margin-bottom: 1.5rem;
+}
+
+.footer-flex-logo {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
   color: var(--color-white-100);
 }
 
@@ -500,12 +715,19 @@ textarea::placeholder {
 }
 
 .footer-copyrights {
-  font-size: 1.1rem;
+  font-size: 1.6rem;
   color: var(--color-white-100);
 }
 
 /**************************** POLICY ****************************/
+
+.policy-logo-align {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 .policy-font-up {
+  text-align: center;
   font-family: inherit;
   font-size: 3.6rem;
   font-weight: 400;
@@ -578,9 +800,7 @@ textarea::placeholder {
   .womens {
     padding: 3rem;
   }
-  .aboutus {
-    padding: 3rem 15rem;
-  }
+
   .caption-upper {
     font-size: 2rem;
     padding: 0 0 9rem 0;
