--- a/src/index.css
+++ b/src/index.css
@@ -610,10 +610,9 @@ li {
 }
 
 .right-block-women-card {
-  display: flex;
-  place-content: center;
   padding: 2rem;
-  width: 85%;
+  margin-left: 5rem;
+  width: 70%;
 }
 .right-block-women-card .styled {
   width: 5rem;
@@ -651,11 +650,9 @@ li {
 }
 
 .menu-grid {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  place-items: center;
+  justify-items: center;
 
   padding: 0rem 0rem 5rem 0;
 }
@@ -903,10 +900,10 @@ textarea::placeholder {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  gap: 3rem;
-  place-content: center;
+  gap: 5rem;
+  justify-content: center;
   color: var(--color-white-100);
-  margin-bottom: 1.5rem;
+  margin-bottom: 2rem;
 }
 
 .footer-flex-logo {
@@ -923,7 +920,7 @@ textarea::placeholder {
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-  gap: 1rem;
+  gap: 2.5rem;
   color: var(--color-white-100);
 }
 
