--- a/src/index.sass
+++ b/src/index.sass
@@ -1,368 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Anton&family=Great+Vibes&family=Monoton&family=Roboto+Mono:wght@400;500;600;700&display=swap")
-
-:root
-  --color-primary-100: rgb(11, 19, 21)
-  --color-primary-200: rgb(15, 29, 34)
-  --color-secondary-100: rgb(200, 170, 128)
-  --color-secondary-200: rgb(222, 204, 179)
-  --color-tertiary-200: rgb(114, 93, 68)
-
-  --color-white-100: rgba(223, 220, 220, 0.933)
-  --color-white-200: rgba(244, 244, 244, 1)
-  --color-gray-100: rgb(169, 169, 169)
-  --color-gray-200: rgb(156, 156, 164)
-
-*,
-*::before,
-*::after
-  margin: 0
-  padding: 0
-  box-sizing: border-box
-
-html
-  font-family: "Roboto Mono", monospace
-  font-weight: 400
-  font-size: 62.5%
-
-body
-  background-color: var(--color-primary-100)
-
-html,
-body
-  overflow-x: hidden
-
-h1,
-h2
-  font-weight: 400
-
-ul,
-ol
-  list-style: none
-  margin: 0
-  padding: 0
-
-p
-  font-weight: 400
-  font-size: 1.8rem
-
-a
-  color: var(--color-secondary-100)
-  text-decoration: none
-  font-size: 1.6rem
-  font-weight: 400
-
-li
-  font-size: 1.6rem
-
-/****************************  HELPER CLASSES  ****************************/
-.sm-margin-top
-  margin-top: 1rem
-
-.m-margin-top
-  margin-top: 2.5rem
-
-.mdm-margin-top
-  margin-top: 4rem
-
-.mds-margin-top
-  margin-top: 6rem
-
-.lg-margin-top
-  margin-top: 8rem
-
-.xlg-margin-top
-  margin-top: 10rem
-
-.xxlg-margin-top
-  margin-top: 14rem
-
-.md-margin-bottom
-  margin-bottom: 1rem
-
-.mds-margin-bottom
-  margin-bottom: 2rem
-
-.mdm-margin-bottom
-  margin-bottom: 10rem
-
-.lg-margin-bottom
-  margin-bottom: 15rem
-
-.xxlg-margin-bottom
-  margin-bottom: 25rem
-
-.s-padding
-  padding: 3.9rem
-
-.sm-padding
-  padding: 4rem
-
-.md-padding
-  padding: 5rem
-
-.xlg-padding
-  padding: 10rem
-
-/****************************  HERO CONTENT  ****************************/
-
-.container-hero
-  width: 100%
-  height: 100vh
-
-.temp
-  position: absolute
-  width: 100%
-  height: 100vh
-  background-color: var(--color-primary-100)
-  background-size: cover
-  animation: fadeOut 5s linear forwards
-  opacity: 1
-
-@keyframes fadeOut
-  0%
-    opacity: 0
-
-  40%
-    opacity: 0
-
-  41%
-    opacity: 1
-
-  91%
-    opacity: 1
-
-  92%
-    opacity: 0
-
-  100%
-    opacity: 0
-
-.first-block
-  position: absolute
-  width: 0
-  height: 100vh
-  background-color: var(--color-white-200)
-  animation: go-left 4s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards
-  left: 0
-
-@keyframes go-left
-  0%
-    left: 0
-    width: 0%
-
-  50%
-    left: 0
-    width: 100%
-
-  100%
-    left: 100%
-    width: 0
-
-.second-block
-  position: absolute
-  width: 0
-  height: 100vh
-  background-color: var(--color-tertiary-200)
-  animation: go-left 3.2s cubic-bezier(0.74, 0.6, 0.4, 0.92) forwards
-  animation-delay: 3s
-
-.loader
-  position: absolute
-  top: 50%
-  left: 50%
-  transform: translate(-50%, -50%)
-
-  & ul
-    list-style: none
-    margin: 0
-    padding: 0
-
-  & ul li
-    display: inline-block
-    color: var(--color-white-100)
-    font-family: inherit
-    font-weight: bolder
-    margin: 0 0.8rem
-    font-size: 2.4rem
-    text-transform: uppercase
-    animation: loadNow 4s ease-in-out forwards
-    opacity: 0
-    transform: translateX(0rem)
-
-@keyframes loadNow
-  0%
-    opacity: 0
-    transform: translateX(8rem)
-
-  20%
-    opacity: 1
-    transform: translateX(0rem)
-
-  80%
-    opacity: 1
-    transform: translateX(0rem)
-
-  100%
-    opacity: 0
-    transform: translateX(-8rem)
-
-.loader ul li:nth-child(1)
-  animation-delay: 1.05s
-
-.loader ul li:nth-child(2)
-  animation-delay: 1.1s
-
-.loader ul li:nth-child(3)
-  animation-delay: 1.15s
-
-.loader ul li:nth-child(4)
-  animation-delay: 1.2s
-
-.loader ul li:nth-child(5)
-  animation-delay: 1.25s
-
-.loader ul li:nth-child(6)
-  animation-delay: 1.3s
-
-.loader ul li:nth-child(7)
-  animation-delay: 1.35s
-
-.loader ul li:nth-child(8)
-  animation-delay: 1.4s
-
-.loader ul li:nth-child(9)
-  animation-delay: 1.45s
-
-.loader ul li:nth-child(10)
-  animation-delay: 1.5s
-
-.third-block
-  position: absolute
-  width: 0%
-  height: 100vh
-  background: var(--color-primary-200)
-  animation: expandNow 1.4s cubic-bezier(0.19, 1, 0.22, 1) forwards
-  animation-delay: 6.2s
-
-@keyframes expandNow
-  0%
-    width: 0%
-
-  100%
-    width: 64%
-
-.menu
-  position: absolute
-  right: 0
-  margin: 3rem
-
-.logo
-  position: absolute
-  left: 0
-  margin: 2rem
-
-  & img
-    opacity: 0
-    animation: appearimg 0.1s linear forwards
-    animation-delay: 6.4s
-
-.content
-  position: absolute
-  width: 50rem
-  top: 46%
-  left: 28%
-  transform: translate(-50%, -50%)
-  text-align: left
-
-.heading
-  font-family: "Great Vibes", cursive
-  font-weight: bolder
-  font-size: 4.2rem
-  line-height: 1
-  color: var(--color-secondary-100)
-
-.desc
-  font-family: inherit
-  font-weight: bolder
-
-  & p
-    margin-top: 3rem
-    margin-bottom: 3rem
-    color: var(--color-white-100)
-    font-size: 2rem
-    font-weight: 800
-    line-height: 1.4
-
-.button-hero
-  font-family: inherit
-  border: none
-  padding: 1.6rem 4rem
-  letter-spacing: 0.2rem
-  text-transform: uppercase
-  background-color: var(--color-secondary-100)
-  cursor: pointer
-
-  &:hover
-    background-color: var(--color-secondary-200)
-
-.img img
-  width: 50rem
-  height: 100%
-  opacity: 0
-  animation: appearimg 0.1s linear forwards
-  animation-delay: 6.4s
-
-.img
-  position: absolute
-  z-index: 1000
-  top: 50%
-  right: 14%
-  transform: translateY(-65%)
-
-  &::after
-    content: ""
-    top: 0
-    left: 0
-    width: 0%
-    height: 100%
-    position: absolute
-    background: var(--color-tertiary-200)
-    animation: rev-img 1.5s cubic-bezier(0.19, 1, 0.22, 1) forwards
-    animation-delay: 6s
-
-@keyframes rev-img
-  0%
-    left: 0
-    width: 0%
-
-  50%
-    width: 50rem
-    left: 0
-
-  100%
-    left: 50rem
-    width: 0
-
-@keyframes appearimg
-  0%
-    opacity: 0
-
-  100%
-    opacity: 1
-
-.media ul
-  list-style: none
-  position: absolute
-  bottom: 0
-  right: 2.4rem
-  padding: 1rem
-
-  & li
-    font-size: 1.8rem
-    margin: 2.4rem 0
-
-/**************************** ABOUT US ****************************/
-
 .caption-about
   font-size: 6.4rem
   color: var(--color-secondary-100)
@@ -373,6 +8,8 @@ li
 
 .aboutus-container
   width: 100%
+  display: -webkit-box
+  display: -ms-flexbox
   display: flex
   place-self: center
   padding: 5rem 10rem
@@ -390,18 +27,12 @@ li
     color: var(--color-secondary-100)
 
 /**************************** WOMENS CARD ****************************/
-
-.container-left
-  width: 50%
-  position: relative
-
-.women-card-wrappper
+.container-grid-women
+  width: 100%
   min-height: 100vh
-  height: auto
-  width: 100vw
-  margin: 0 auto
-  overflow: hidden
   position: relative
+  display: grid
+  grid-template-columns: 1fr 1fr
 
 .women-title
   font-size: 6.4rem
@@ -414,24 +45,28 @@ li
   font-weight: 400
 
 .left-block-women-card
-  width: 35%
+  width: 75%
   background-color: var(--color-primary-200)
   color: var(--color-white-100)
-  min-height: 100vh
+  min-height: 100%
   z-index: 5
+  display: -webkit-box
+  display: -ms-flexbox
   display: flex
+  -webkit-box-pack: center
+  -ms-flex-pack: center
   justify-content: center
+  -webkit-box-align: center
+  -ms-flex-align: center
   align-items: center
   font-size: 2rem
   padding: 2rem
 
 .right-block-women-card
-  color: var(--color-white-200)
-  position: absolute
-  padding-left: 30%
-  top: 5%
-  left: 85%
-  width: 90%
+  display: flex
+  place-content: center
+  padding: 2rem
+  width: 85%
 
   & .styled
     width: 5rem
@@ -463,13 +98,14 @@ li
   margin-top: 10rem
   font-family: "Great Vibes", cursive
 
-.menu-flex
-  display: flex
-  justify-content: center
-  align-items: center
-  width: 100%
+.menu-grid
+  display: -webkit-box
+  display: -ms-flexbox
+  display: grid
+  grid-template-columns: repeat(2, 1fr)
+  place-items: center
+
   padding: 0rem 0rem 5rem 0
-  gap: 30%
 
 .menu-items-caption
   font-size: 5rem
@@ -478,7 +114,7 @@ li
 
 .menu-items-sub-cation
   font-size: 2.4rem
-  margin-top: 1.5rem
+  margin-top: 1rem
   color: var(--color-secondary-100)
   font-family: inherit
 
@@ -495,13 +131,21 @@ li
   margin-bottom: 4rem
   font-family: "Great Vibes", cursive
 
+#comment
+  padding: 10rem
+
 .comments
+  display: -webkit-box
+  display: -ms-flexbox
   display: flex
+  flex-direction: column
   font-size: 1.6rem
   margin-top: 4rem
   font-family: "Roboto Mono", monospace
+  -webkit-box-align: center
+  -ms-flex-align: center
   align-items: center
-  height: 13rem
+  height: 15rem
   color: var(--color-white-100)
   margin: auto
   text-align: center
@@ -514,11 +158,10 @@ li
   font-family: "Great Vibes", cursive
 
 /**************************** RESERVATION ****************************/
-
 .thoughts-caption
   text-align: left
-  margin-top: 15rem
-  font-size: 6rem
+  margin-top: 10rem
+  font-size: 5.6rem
   font-weight: 400
   line-height: 2
   color: var(--color-secondary-100)
@@ -531,18 +174,34 @@ li
   gap: 5rem
   padding: 0 5rem
 
+.location-div
+  display: flex
+  justify-content: center
+  align-items: flex-end
+
 .location
+  height: 80%
+  padding: 6.8rem
+  margin-bottom: 2rem
   background-color: var(--color-primary-200)
   border: 2px solid var(--color-secondary-100)
-  border-radius: 5%
+  display: -webkit-box
+  display: -ms-flexbox
   display: flex
+  -webkit-box-orient: vertical
+  -webkit-box-direction: normal
+  -ms-flex-direction: column
   flex-direction: column
+  -webkit-box-pack: center
+  -ms-flex-pack: center
   justify-content: center
+  -webkit-box-align: center
+  -ms-flex-align: center
   align-items: center
 
   &-caption
     text-align: right
-    font-size: 6.2rem
+    font-size: 5.6rem
     font-weight: 400
     line-height: 1.7
     font-family: "Great Vibes", cursive
@@ -551,10 +210,8 @@ li
   &-detail
     text-align: right
     font-family: inherit
-    font-size: 2rem
-    padding: 2rem
+    font-size: 1.2rem
     font-weight: 400
-
     color: var(--color-white-100)
 
 .reservation-caption-up
@@ -583,7 +240,11 @@ li
 
 .grid-form
   display: grid
+  -webkit-box-pack: start
+  -ms-flex-pack: start
   justify-content: flex-start
+  -webkit-box-align: center
+  -ms-flex-align: center
   align-items: center
   grid-template-columns: 1fr 1fr
   grid-gap: 2rem
@@ -616,7 +277,39 @@ li
   color: var(--color-white-200)
   background-color: var(--color-secondary-100)
 
+input::-webkit-input-placeholder
+  font-family: inherit
+  color: var(--color-gray-100)
+
+input::-moz-placeholder
+  font-family: inherit
+  color: var(--color-gray-100)
+
+input:-ms-input-placeholder
+  font-family: inherit
+  color: var(--color-gray-100)
+
+input::-ms-input-placeholder
+  font-family: inherit
+  color: var(--color-gray-100)
+
 input::placeholder
+  font-family: inherit
+  color: var(--color-gray-100)
+
+textarea::-webkit-input-placeholder
+  font-family: inherit
+  color: var(--color-gray-100)
+
+textarea::-moz-placeholder
+  font-family: inherit
+  color: var(--color-gray-100)
+
+textarea:-ms-input-placeholder
+  font-family: inherit
+  color: var(--color-gray-100)
+
+textarea::-ms-input-placeholder
   font-family: inherit
   color: var(--color-gray-100)
 
@@ -625,9 +318,10 @@ textarea::placeholder
   color: var(--color-gray-100)
 
 /**************************** FOOTER ****************************/
-
 .footer-flex-informations
-  margin-top: 20rem
+  margin-top: 14rem
+  display: -webkit-box
+  display: -ms-flexbox
   display: flex
   gap: 3rem
   place-content: center
@@ -635,9 +329,18 @@ textarea::placeholder
   margin-bottom: 1.5rem
 
 .footer-flex-logo
+  display: -webkit-box
+  display: -ms-flexbox
   display: flex
+  -webkit-box-align: center
+  -ms-flex-align: center
   align-items: center
+  -webkit-box-pack: center
+  -ms-flex-pack: center
   justify-content: center
+  -webkit-box-orient: vertical
+  -webkit-box-direction: normal
+  -ms-flex-direction: column
   flex-direction: column
   gap: 1rem
   color: var(--color-white-100)
@@ -654,10 +357,15 @@ textarea::placeholder
   color: var(--color-white-100)
 
 /**************************** POLICY ****************************/
-
 .policy-logo-align
+  display: -webkit-box
+  display: -ms-flexbox
   display: flex
+  -webkit-box-align: center
+  -ms-flex-align: center
   align-items: center
+  -webkit-box-pack: center
+  -ms-flex-pack: center
   justify-content: center
 
 .policy-font-up
@@ -679,6 +387,8 @@ textarea::placeholder
     color: var(--color-gray-100)
 
 .flex-policy
+  display: -webkit-box
+  display: -ms-flexbox
   display: flex
   gap: 1rem
   place-content: center
@@ -690,197 +400,142 @@ textarea::placeholder
   line-height: 1.7
 
 /**************************** MEDIA QUERIES****************************/
-
-@media (max-width: 83em)
+@media only screen and (max-width: 84.5em)
   html
-    /* 9px / 16px */
     font-size: 56.25%
 
-  .menu
-    margin: 0 -4rem
+  .container-grid-women
+    min-height: 75%
 
-  .icons-text-prefix
-    gap: 3rem
+  .aboutus-description
+    font-size: 2.6rem
 
-@media (max-width: 80em)
-  .menu
-    margin: 0 -4rem
+  .img
+    top: 50%
+    right: 9%
 
-  .aboutus
-    padding: 3rem 17rem
-
-@media (max-width: 70.5em)
-  .menu
-    margin: 0 -6rem
-
-@media (max-width: 68.75em)
-  html
-    /* 8px /16px */
-    font-size: 53%
-
-  .menu
-    margin: 0 -7rem
-
-  .womens
-    padding: 3rem
-
-  .caption-upper
-    font-size: 2rem
-    padding: 0 0 9rem 0
-
-  .caption-middle
-    font-size: 4rem
-
-  #beverage,
-  #food,
-  #music,
-  #butler
-    height: 9rem
-
-@media (max-width: 67.75em)
-  .menu
-    margin: 0 -7rem
-    padding: 0 3rem
-
-  .inner-hero
-    height: 100vh
-
-@media (max-width: 66.55em)
-  .menu
-    margin: 0 -11rem
-
-  .womens
-    padding: 0 1rem
-
-  .caption-upper
-    font-size: 2rem
-
-  .caption-middle
-    font-size: 3.8rem
-
-@media (max-width: 64em)
-  html
-    /* 8px /16px */
-    font-size: 50%
-
-  .menu
-    padding: 0 3rem
-
-  .aboutus
-    padding: 3rem 13rem
-
-  .icon-flex-grid
-    grid-template-columns: repeat(2, 1fr)
-    gap: 2rem
-
-  .menu-details-caption
+@media only screen and (max-width: 78.125em)
+  .heading
     font-size: 3.6rem
 
-  .menu-details-upper
+  .desc p
     font-size: 1.8rem
 
-  .menu-details
+  .button-hero
+    padding: 1.4rem 3.6rem
+
+  .img
+    top: 50%
+    right: 2%
+
+  .caption-about
+    font-size: 4.8rem
+
+  .aboutus-description
+    font-size: 2.4rem
+
+  .women-title
+    font-size: 4.8rem
+
+  .caption-gallery
+    font-size: 4.8rem
+
+  .thoughts-caption
+    font-size: 4.8rem
+
+  .location-caption
+    font-size: 4.8rem
+
+  .caption-menu
+    font-size: 4.8rem
+
+  .menu-items-caption
+    font-size: 4rem
+
+  .caption-testimonial
+    font-size: 4.8rem
+
+  .reservation-caption-up
+    font-size: 4.8rem
+
+  .author
+    font-size: 1.8rem
+
+@media only screen and (max-width: 64.0625em)
+  .container-grid-women
+    min-height: 75%
+
+    &
+      min-height: 75%
+
+  .menu-items-caption
+    font-size: 2.8rem
+
+  .menu-items-sub-cation
+    font-size: 2rem
+
+  .menu-items
     font-size: 1.6rem
 
-  #beverage,
-  #food,
-  #music,
-  #butler
-    height: 7rem
+  .women-title
+    font-size: 4rem
 
-  .icon-caption
-    font-size: 1.6rem
+  .caption-gallery
+    font-size: 4rem
 
-  .inner-hero
-    height: 70vh
+  .caption-about
+    font-size: 4rem
 
-@media (max-width: 58.625em)
-  html
-    /* 8px /16px */
-    font-size: 48%
+  .left-block-women-card
+    font-size: 1.7rem
 
-  .reservation-contactus-up
-    font-size: 3.2rem
+  .location-caption
+    font-size: 4rem
 
-  #foursquare,
-  #instagram,
-  #facebook
-    height: 4rem
+  .caption-menu
+    font-size: 4rem
 
-  .react-photo-album
-    padding: 0 2rem
+  .thoughts-caption
+    font-size: 4rem
 
-@media (max-width: 56.25em)
-  html
-    /* 8px /16px */
-    font-size: 45%
+  .caption-testimonial
+    font-size: 4rem
 
-  .aboutus
-    padding: 3rem 11rem
+  .reservation-caption-up
+    font-size: 4rem
 
-  .grid-55-45-map
-    grid-template-columns: 1fr
+  .comments h3
+    font-size: 1.5rem
 
-  .grid-45-55
-    grid-template-columns: 1fr
-    padding: 5rem 25rem
+  .author
+    font-size: 1.5rem
 
-  .map-container
-    width: 100rem
+  .reservation-contactus
+    font-size: 1.5rem
 
-@media (max-width: 53.125em)
-  html
-    /* 8px /16px */
-    font-size: 41%
+  .reservation-number
+    font-size: 2rem
 
-@media (max-width: 48em)
-  html
-    /* 8px /16px */
-    font-size: 36%
-
-  .aboutus
-    padding: 3rem 7rem
-
-@media (max-width: 42.375em)
-  html
-    /* 8px /16px */
-    font-size: 32%
-
-@media (max-width: 37em)
-  html
-    /* 8px /16px */
-    font-size: 28%
-
-  .menu-details-caption
-    font-size: 3.5rem
-    font-weight: 800
-
-  .menu-details-upper
-    font-size: 1.6rem
-
-  .menu-details
+  .footer-information
     font-size: 1.4rem
 
-  .menu-grid
-    padding: 0 2rem
+  .footer-copyrights
+    font-size: 1.4rem
 
-  #foursquare,
-  #instagram,
-  #facebook
-    height: 3.4rem
-
-  .flex-icons
-    gap: 0.01rem
-
-@media (max-width: 31.25em)
+@media only screen and (max-width: 62.5em)
   html
-    /* 8px /16px */
-    font-size: 26%
+    font-size: 50%
 
-@media (max-width: 26.6875em)
-  html
-    /* 8px /16px */
-    font-size: 24%
+  .aboutus-description
+    font-size: 2.6rem
 
-  .menu-grid-inner
-    gap: -10rem
+@media only screen and (max-width: 54.375em)
+  .img
+    top: 50%
+    right: 1%
+
+    & img
+      width: 45rem
+
+  .aboutus-description
+    font-size: 2.6rem
