--- a/src/index.css
+++ b/src/index.css
@@ -591,7 +591,7 @@ li {
 }
 
 .left-block-women-card {
-  width: 75%;
+  width: 80%;
   background-color: var(--color-primary-200);
   color: var(--color-white-100);
   min-height: 100%;
@@ -610,8 +610,8 @@ li {
 }
 
 .right-block-women-card {
-  padding: 2rem;
-  margin-left: 5rem;
+  padding: 4.5rem;
+  margin-left: 6.5rem;
   width: 70%;
 }
 .right-block-women-card .styled {
@@ -716,7 +716,7 @@ li {
 .thoughts-caption {
   text-align: left;
   margin-top: 10rem;
-  font-size: 5.6rem;
+  font-size: 5.4rem;
   font-weight: 400;
   line-height: 2;
   color: var(--color-secondary-100);
@@ -768,7 +768,7 @@ li {
 .location-detail {
   text-align: right;
   font-family: inherit;
-  font-size: 1.2rem;
+  font-size: 1.8rem;
   font-weight: 400;
   color: var(--color-white-100);
 }
@@ -897,28 +897,17 @@ textarea::placeholder {
 /**************************** FOOTER ****************************/
 .footer-flex-informations {
   margin-top: 14rem;
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  gap: 5rem;
+  gap: 3rem;
   justify-content: center;
   color: var(--color-white-100);
   margin-bottom: 2rem;
 }
 
 .footer-flex-logo {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
   align-items: center;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
   justify-content: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
   flex-direction: column;
   gap: 2.5rem;
   color: var(--color-white-100);
@@ -933,7 +922,7 @@ textarea::placeholder {
 }
 
 .footer-copyrights {
-  font-size: 1.6rem;
+  font-size: 1.2rem;
   color: var(--color-white-100);
 }
 
@@ -1050,6 +1039,9 @@ textarea::placeholder {
   .author {
     font-size: 1.8rem;
   }
+  .right-block-women-card {
+    width: 85%;
+  }
 }
 @media only screen and (max-width: 64.0625em) {
   .container-grid-women {
@@ -1122,6 +1114,12 @@ textarea::placeholder {
   .aboutus-description {
     font-size: 2.6rem;
   }
+  .first-block {
+    animation: none;
+  }
+  .second-block {
+    animation: none;
+  }
 }
 @media only screen and (max-width: 54.375em) {
   .img {
@@ -1133,5 +1131,23 @@ textarea::placeholder {
   }
   .aboutus-description {
     font-size: 2.6rem;
+  }
+  .right-block-women-card {
+    width: 100%;
+    margin-left: 0.5rem;
+  }
+}
+@media only screen and (max-width: 50.0625em) {
+  .content {
+    top: 70%;
+    left: 50%;
+  }
+  .img {
+    top: 30%;
+    right: 50%;
+    transform: translate(50%, -50%);
+  }
+  .img img {
+    width: 50rem;
   }
 }
