--- a/src/index.css
+++ b/src/index.css
@@ -1236,6 +1236,11 @@ textarea::placeholder {
     width: 2rem;
   }
 }
+@media only screen and (max-width: 30.125em) {
+  .grid-50-50 {
+    padding: 1rem;
+  }
+}
 @media only screen and (max-width: 24.6875em) {
   html {
     font-size: 40%;
@@ -1287,9 +1292,7 @@ textarea::placeholder {
   #comment {
     padding: 2rem;
   }
-  .grid-50-50 {
-    padding: 4rem;
-  }
+
   #menu {
     padding: 3rem;
   }
